# rpmeta

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  justfile  pyproject.toml  ruff.toml
.github/workflows/: codeql.yml  deploy-to-pypi.yml  new-issues-to-board.yml  test.yml
files/: 95-rpmeta.preset  config.toml.example  rpmeta.env  rpmeta.service  rpmeta.spec
rpmeta/: cli.py  config.py  constants.py  dataset.py  fetcher.py  helpers.py  model.py  predictor.py  regressor.py  rpmeta.code-workspace  server.py  store.py  train.py
rpmeta/cli/: ctx.py  fetcher.py  main.py  model.py  run.py  trainer.py
rpmeta/fetcher/: fetcher.py
rpmeta/server/: api.py
rpmeta/train/: __init__.py  base.py  models.py  trainer.py  transformers.py  visualizer.py
rpmeta/trainer/: __init__.py  base.py  models.py  trainer.py  visualizer.py
scripts/: generate_config.py  update_version.py
test/: Containerfile  conftest.py  helpers.py
test/data/: config.toml  dataset_predict.json  dataset_train.json
test/e2e/: test_e2e.py
test/integration/: test_fetcher.py
test/unit/: test_config.py  test_dataset.py  test_generate_config.py  test_model.py  test_model_persistence.py  test_pipeline.py  test_predictor.py  test_regressor.py  test_transformers.py
