[project]
name = "rpmeta"
version = "0.1.0"
description = "Estimate duration of RPM package build"
authors = [
    { name = "Copr Team", email = "copr-devel@lists.fedorahosted.org" },
]
maintainers = [
    { name = "Copr Team", email = "copr-devel@lists.fedorahosted.org" },
]
keywords = ["copr", "rpm", "rpmeta", "ai"]
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "joblib>=1.0",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/fedora-copr/rpmeta"
Repository = "https://github.com/fedora-copr/rpmeta"
Issues = "https://github.com/fedora-copr/rpmeta/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "requests>=2.30.0",
]
server = [
    "starlette>=0.35.0",
    "uvicorn>=0.21.0",
]
trainer = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
]
fetcher = [
    "fedora-distro-aliases>=1.4",
    "koji>=1.20.0",
    "copr>=2.0",
    "tqdm>=4.0.0",
    "requests>=2.30.0",
]

[project.scripts]
rpmeta = "rpmeta.cli:entry_point"
